lessons/167/7-example/2-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: 7-example
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
  selector:
    app: nginx
